--- a/Post.Common/Post.Common.csproj
+++ b/Post.Common/Post.Common.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CQRS.Core\CQRS.Core.csproj" />
+  </ItemGroup>
+
 </Project>
